entrega.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns-mario-abarca
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-mario-abarca
  namespace: ns-mario-abarca
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-mario-abarca
  template:
    metadata:
      labels:
        app: app-mario-abarca
    spec:
      containers:
      - name: app-mario-abarca
        image: abarcamario/tarea-final:1.0.0
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: svc-mario-abarca
  namespace: ns-mario-abarca
spec:
  selector:
    app: app-mario-abarca
  ports:
  - port: 80
    targetPort: 3000
